k8s/booking/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service-pod
  template:
    metadata:
      labels:
        app: booking-service-pod
    spec:
      containers:
      - name: booking-service
        image: zaranik/booking-service:1.53
        ports:
        - containerPort: 8084
        resources:
          limits:
            memory: "512Mi"
            cpu: "250m"
