k8s/booking/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service-pod
  template:
    metadata:
      labels:
        app: booking-service-pod
    spec:
      containers:
      - name: booking-service
        image: zaranik/booking-service:1.0
        ports:
        - containerPort: 8084
