k8s/booking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8084
  selector:
    app: booking-service-pod
