k8s/booking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/booking
            pathType: "Prefix"
            backend:
              service:
                name: booking-service
                port:
                  number: 80
