k8s/booking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: "Prefix"
            backend:
              service:
                name: booking-management
                port:
                  number: 80
